[package]
name = "exe_gen_server"
version = "0.1.0"
authors = ["scratchyone <scratchywon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
uuid = { version = "0.8.1", features = ["v4"] }
serde = {version="1.0.106", features = ["derive"]}
serde_json = "1.0.52"
base64 = "0.12.0"
anyhow = "1.0.28"
rocket_cors = "0.5.2"
